--- a/src/components/gallery/Modal.css
+++ b/src/components/gallery/Modal.css
@@ -17,7 +17,7 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     display: flex;
     flex-direction: column;
-    padding: 25px;
+    padding: 20px;
 }
 
 .modalContainer .title {
@@ -35,6 +35,10 @@
     border: none;
     font-size: 25px;
     cursor: pointer;
+}
+
+.explanation {
+    margin-top: 0;
 }
 
 .modalContainer .body {
