--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body {
 
 .container {
     text-align: center;
+    min-height: calc(100vh - 25px);
 }
 
 .starPicture {
@@ -70,6 +71,7 @@ footer {
     margin-left: 10px;
     font-style: italic;
     font-size: smaller;
+    height: 25px;
 }
 
 .btn {
