--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,9 @@ body {
 
 .container {
     text-align: center;
-    min-height: calc(100vh - 25px);
+    /* The pixel is the footer hight, this is ugly,
+    need some dynamic value*/
+    min-height: calc(100vh - 45px);
 }
 
 .starPicture {
