--- a/src/App.css
+++ b/src/App.css
@@ -241,8 +241,18 @@ footer {
     height: 50vh;
 }
 
+.errorPage {
+    margin-top: 7vh;
+    display: flex;
+    justify-content: center;
+}
+
 .errorContainer {
-    margin-top: 10vh;
+    border: 1em solid hsl(var(--btn-hue), var(--btn-sat), var(--btn-light));
+    border-radius: 25px;
+    box-shadow: rgba(0, 0, 0, 0.35) -5px 5px 15px;
+    padding: 3%;
+    width: 40vw;
     display: flex;
     flex-direction: column;
     gap: 1vh;
@@ -251,5 +261,5 @@ footer {
 }
 
 .errorImage {
-    height: 35vh;
+    width: 22vw;
 }
