--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,7 @@ footer {
 
 .galleryContainer {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 1rem;
     margin: 0 3vw 2vh 3vw;
 }
@@ -105,7 +105,7 @@ footer {
 .galleryCard {
     position: relative;
     background: white;
-    border-radius: 0.25rem;
+    border-radius: 10px;
     box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, .2);
     overflow: hidden;
 }
@@ -114,7 +114,7 @@ footer {
     display: block;
     width: 100%;
     max-height: 400px;
-    aspect-ratio: 16 / 9;
+    aspect-ratio: 4 / 3;
     object-fit: cover;
     object-position: center;
 }
@@ -148,15 +148,23 @@ footer {
     transform: translateY(100%);
 }
 
+/* On touchscreens the card footer is always visible */
+@media (pointer:coarse) {
+    .galleryCard > .galleryCardFooter {
+        transform: translateY(77%);
+    }
+}
+
+/* The card footer has 2 row heigth on every card size */
 .galleryCard:hover > .galleryCardFooter {
-    transform: translateY(77%);
+    transform: translateY(calc(92% - 2em));
 }
 
 .modalBackground {
     width: 100vw;
     height: 100vh;
     top: 0;
-    background-color: rgba(200, 200, 200, 0.5);
+    background-color: rgba(200, 200, 200, 0.7);
     position: fixed;
     display: flex;
     justify-content: center;
