--- a/src/App.css
+++ b/src/App.css
@@ -53,10 +53,10 @@ footer {
 }
 
 .pictureTitle {
-    font-weight: bold;
-    font-size: 1.1rem;
-    margin-top: 1vh;
-    margin-bottom: 1vh;
+    /* font-weight: bold;
+    font-size: 1.1rem; */
+    /* margin-top: 1vh; */
+    margin-bottom: 2vh;
 }
 
 .pictureButton {
@@ -125,6 +125,7 @@ footer {
 
 .galleryCard:hover {
     box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, .7);
+    cursor: pointer;
 }
 
 .galleryCardPicture {
@@ -136,13 +137,8 @@ footer {
     object-position: center;
 }
 
-.galleryCardPicture:hover {
-    cursor: pointer;
-}
-
 .galleryCardPicture, .galleryCardFooter {
     transition: var(--transition-speed) transform ease-in-out;
-    
 }
 
 .galleryCard {
@@ -195,10 +191,9 @@ footer {
 
 .modalContainer {
     overflow: auto;
-    margin-top: 5vh;
-    /* margin-bottom: 10vh; */
+    margin-top: 8vh;
     max-width: 95%;
-    max-height: 90vh;
+    max-height: 85vh;
     border-radius: 12px;
     background-color: rgba(255, 255, 255, 0.7);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -207,17 +202,13 @@ footer {
     padding: 20px;
 }
 
-.modalContainer .title {
-    display: inline-block;
-    text-align: center;
-}
-
-.titleCloseBtn {
+.modalTitle {
     display: flex;
-    justify-content: flex-end;
+    justify-content:space-between;
+    align-items: center;
 }
 
-.titleCloseBtn button {
+.modalTitle button {
     background-color: transparent;
     border: none;
     font-size: 25px;
@@ -244,21 +235,11 @@ footer {
     align-items: center;
 }
 
-.modalContainer .footer button {
-    background-color: white;
-    color:hsl(var(--navBtn-hue), var(--navBtn-sat), var(--navBtn-light));
-    border: 2px solid hsl(var(--navBtn-hue), var(--navBtn-sat), var(--navBtn-light));
-}
-
-.modalContainer .footer button:hover {
-    background-color: hsl(var(--navBtn-hue), var(--navBtn-sat), 90%)
-}
-
 .aboutContainer {
     border: 1em solid hsl(var(--navBtn-hue), var(--navBtn-sat), var(--navBtn-light));
     border-radius: 25px;
     box-shadow: rgba(0, 0, 0, 0.35) -5px 5px 15px;
-    padding: 5%;
+    padding: 3% 5%;
     margin: 3% 6% 0 6%;
     display: flex;
 }
@@ -270,8 +251,13 @@ footer {
     max-width: 50vw;
 }
 
+@keyframes astronautMove {
+    50% {transform: rotate(10deg);}
+  }
+
 .aboutImage {
     height: 50vh;
+    animation: astronautMove 10s infinite;
 }
 
 .errorPage {
@@ -295,4 +281,5 @@ footer {
 
 .errorImage {
     width: 22vw;
+    animation: astronautMove 10s infinite;
 }
