--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,12 @@ footer {
     border: 1px solid #777;
 }
 
+
+.modalText {
+    max-width: 75vw;
+    margin-top: 0;
+}
+
 .mainPicture {
     max-height: 80vh;
     border-radius: 10px;
@@ -71,7 +77,7 @@ footer {
     margin-bottom: 1vh;
 }
 
-.starExplanation {
+.mainText {
     padding: 0 10%;
 }
 
