--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
     --transition-speed: 400ms;
 }
 
-body {
+html body {
     font-family: 'Open Sans', sans-serif;
     background-color: #F4F4FF;
 }
@@ -310,20 +310,47 @@ footer {
     animation: astronautMove 10s infinite;
 }
 
-.spinner {
-    width: 48px;
-    height: 48px;
-    border-radius: 50%;
+.spinnerContainer {
     display: inline-block;
-    box-sizing: border-box;
-    animation: spinner-animation 1s linear infinite;
+}
+
+.spinner {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
   }
   
-  @keyframes spinner-animation {
-    0% {
-      box-shadow: -72px 0 #FFF inset;
-    }
-    100% {
-      box-shadow: 48px 0 #FFF inset;
+  .spinner > div {
+    width: 18px;
+    height: 18px;
+    background-color: hsl(var(--navBtn-hue), var(--navBtn-sat), var(--navBtn-light));
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  }
+  
+  .spinner .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+  }
+  
+  .spinner .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+  }
+  
+  @-webkit-keyframes sk-bouncedelay {
+    0%, 80%, 100% { -webkit-transform: scale(0) }
+    40% { -webkit-transform: scale(1.0) }
+  }
+  
+  @keyframes sk-bouncedelay {
+    0%, 80%, 100% { 
+      -webkit-transform: scale(0);
+      transform: scale(0);
+    } 40% { 
+      -webkit-transform: scale(1.0);
+      transform: scale(1.0);
     }
   }
