--- a/src/App.css
+++ b/src/App.css
@@ -127,6 +127,7 @@ footer {
     border-radius: 10px;
     box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, .5);
     overflow: hidden;
+    animation: placeholder-animation 1s ease-in-out infinite alternate;
 }
 
 .galleryCard:hover {
@@ -135,13 +136,16 @@ footer {
 }
 
 .galleryCardPicture {
-    display: block;
+    visibility: visible;
     width: 100%;
     max-height: 400px;
     aspect-ratio: 4 / 3;
     object-fit: cover;
     object-position: center;
-    animation: placeholder-animation 1s ease-in-out infinite alternate;
+}
+
+.galleryCardPicture.loading {
+    visibility: hidden;
 }
 
 @keyframes placeholder-animation {
