--- a/src/App.css
+++ b/src/App.css
@@ -35,10 +35,12 @@ footer {
     border-radius: 10px;
     object-fit: cover;
     margin-bottom: 1vh;
+    box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, .5);
 }
 
 .modalImage:hover {
     cursor: pointer;
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, .5);
 }
 
 .modalText {
@@ -51,10 +53,12 @@ footer {
     border-radius: 15px;
     object-fit: cover;
     margin-bottom: 1vh;
+    box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, .5);
 }
 
 .mainImage:hover {
     cursor: pointer;
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, .5);
 }
 
 .imageTitle {
