--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@ footer {
     object-fit: cover;
     margin-bottom: 1vh;
     box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, .5);
+    margin-top: 5px;
 }
 
 .modalImage:hover {
