--- a/src/App.css
+++ b/src/App.css
@@ -35,13 +35,13 @@ footer {
     border-radius: 10px;
     object-fit: cover;
     margin-bottom: 1vh;
-    box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, .5);
+    box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, .5);
     margin-top: 5px;
 }
 
 .modalImage:hover {
     cursor: pointer;
-    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, .5);
+    box-shadow: 3px 3px 8px 3px rgba(0, 0, 0, .5);
 }
 
 .modalText {
@@ -54,12 +54,16 @@ footer {
     border-radius: 15px;
     object-fit: cover;
     margin-bottom: 1vh;
-    box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, .5);
+    box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, .5);
 }
 
 .mainImage:hover {
     cursor: pointer;
-    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, .5);
+    box-shadow: 3px 3px 8px 3px rgba(0, 0, 0, .5);
+}
+
+.mainImage, .modalImage {
+    transition: 300ms box-shadow ease-in-out;
 }
 
 .imageTitle {
