--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,14 @@ footer {
     height: 25px;
 }
 
+.mainImage {
+    max-height: 80vh;
+    border-radius: 15px;
+    object-fit: cover;
+    margin-bottom: 1vh;
+    box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, .5);
+}
+
 .modalImage {
     max-height: 80vh;
     max-width: 80vw;
@@ -39,25 +47,12 @@ footer {
     margin-top: 5px;
 }
 
-.modalImage:hover {
-    cursor: pointer;
-    box-shadow: 3px 3px 8px 3px rgba(0, 0, 0, .5);
-}
-
 .modalText {
     max-width: 75vw;
     margin-top: 0;
 }
 
-.mainImage {
-    max-height: 80vh;
-    border-radius: 15px;
-    object-fit: cover;
-    margin-bottom: 1vh;
-    box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, .5);
-}
-
-.mainImage:hover {
+.mainImage:hover, .modalImage:hover {
     cursor: pointer;
     box-shadow: 3px 3px 8px 3px rgba(0, 0, 0, .5);
 }
